@@ -1,3 +1,10 @@
+2007-12-03  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/data/xy/XYSeriesCollection.java
+	(getSeries(Comparable)): New method,
+	* tests/org/jfree/data/xy/junit/XYSeriesCollectionTests.java
+	(testGetSeriesByKey): New test method.
+	
 2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/data/xy/XYDataItem.java
